<resources>
    <string name="app_name">U2_A_a13josecc</string>
    <string name="action_settings">Settings</string>

    <string name="tfTexto">Type some text and press the button</string>
    <string name="ptEsctrito">Here is where you will see the text that you type</string>



    <string name="cbLimpar">Clear</string>
    <string name="btAñadirLimpar">Add/Clear</string>
    <string name="rbRojo">Red</string>
    <string name="rbAzul">Blue</string>

    <string name="toast1">Fisterra</string>
    <string name="toast2">You have selected a Galician province</string>
    <string name="toast3">You have not selected a Galician Province</string>
    <string name="toast4">Lighthouse of Fisterra</string>


    <string name="Coruña">A Coruna</string>
    <string name="Lugo">Lugo</string>
    <string name="Pontevedra">Pontevedra</string>
    <string name="Ourense">Ourense</string>
    <string name="Leon">Leon</string>



    <string name="on">Start</string>
    <string name="off">Stop</string>
</resources>
